feat: add test and production deployment infrastructure
- Docker Compose configs for test and production environments
- Automated deployment scripts (bash and PowerShell)
- Environment-specific appsettings files
- Nginx reverse proxy with SSL support
- Comprehensive deployment guide
- Security best practices and monitoring setup

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,24 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Environment files - NEVER commit sensitive data!
+.env.production
+.env.test
+.env
+
+# Logs
+logs/
+logs-test/
+*.log
+
+# Backups
+backups/*.sql
+backups/*.sql.gz
+
+# SSL Certificates
+nginx/ssl/*.pem
+nginx/ssl/*.key
+
 # User-specific files
 *.rsuser
 *.suo
