--- a/QiwiGateway.Api/appsettings.Production.json
+++ b/QiwiGateway.Api/appsettings.Production.json
@@ -1,14 +1,65 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Warning",
+      "Microsoft": "Warning",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Warning"
+      "Microsoft.EntityFrameworkCore": "Error"
+    },
+    "File": {
+      "Path": "Logs/qiwi-api-.log",
+      "RollingInterval": "Day",
+      "RetainedFileCountLimit": 30,
+      "FileSizeLimitBytes": 10485760,
+      "OutputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
     }
   },
   "AllowedHosts": "*",
-
+  
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres;Port=5432;Database=qiwi_gateway;Username=bePay_user;Password=G7x!r9Qv2@secure"
+    "DefaultConnection": "Host=postgres;Port=5432;Database=qiwi_gateway_prod;Username=qiwi_prod_user;Password=CHANGE_THIS_IN_ENV"
+  },
+
+  "Cors": {
+    "AllowedOrigins": [
+      "https://yourdomain.com",
+      "https://www.yourdomain.com"
+    ]
+  },
+
+  "Swagger": {
+    "Enabled": false,
+    "Title": "QIWI Gateway API",
+    "Description": "Production QIWI Payment Gateway API"
+  },
+
+  "RateLimiting": {
+    "Enabled": true,
+    "RequestsPerMinute": 100,
+    "BurstSize": 20
+  },
+
+  "Security": {
+    "RequireHttps": true,
+    "EnableCors": true,
+    "EnableHsts": true,
+    "HstsMaxAge": 31536000
+  },
+
+  "Features": {
+    "EnableDetailedErrors": false,
+    "EnableSensitiveDataLogging": false,
+    "EnableDeveloperExceptionPage": false
+  },
+
+  "HealthChecks": {
+    "Enabled": true,
+    "Path": "/health"
+  },
+
+  "Performance": {
+    "EnableResponseCompression": true,
+    "EnableResponseCaching": true,
+    "CacheDurationSeconds": 60
   }
 }
